--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,16 @@
 </head>
 
     <body class="no-theme">
+        <a href="/bbs">掲示板</a></br>
+                    <div class="pure-u-1-4"></div>
+            <div class="pure-u-1 pure-u-md-12-24 searchbar">
+                <form id="searchForm" class="pure-form" action="/search" method="get">
+                    <fieldset>
+                        <input type="search" id="searchbox" autocomplete="on" autocorrect="on" autocapitalize="none" spellcheck="false" autofocus="" name="q" placeholder="検索" title="検索" value="">
+                    </fieldset>
+                </form>
+            </div>
+            <div class="pure-u-1-4"></div>
         <script>
             $('#searchbox').autocomplete({
                 source: function (request, response) {
@@ -43,4 +53,5 @@
     </body>
 
 </html>
+
 
