--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,9 @@
 </head>
 
     <body class="no-theme">
+                <div class="pure-g h-box" id="search-widget">
+            <div class="pure-u-1" id="logo">
+                <h1 href="/" class="pure-menu-heading">Yuki Youtube</h1>
         <a href="/bbs">掲示板</a></br>
                     <div class="pure-u-1-4"></div>
             <div class="pure-u-1 pure-u-md-12-24 searchbar">
@@ -53,5 +56,6 @@
     </body>
 
 </html>
+
 
 
