--- a/templates/home.html
+++ b/templates/home.html
@@ -21,6 +21,7 @@
                 <h1 href="/" class="pure-menu-heading">Yuki Youtube</h1>
         <a href="/bbs">掲示板</a></br>
                     <div class="pure-u-1-4"></div>
+           <div class="pure-u-1-4"></div>
             <div class="pure-u-1 pure-u-md-12-24 searchbar">
                 <form id="searchForm" class="pure-form" action="/search" method="get">
                     <fieldset>
@@ -56,6 +57,7 @@
     </body>
 
 </html>
+
 
 
 
