--- a/templates/info.html
+++ b/templates/info.html
@@ -1,74 +1,79 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
     <title>連番を簡単に生成！！</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="/css/pure-min.css">
-    <link rel="stylesheet" href="/css/grids-responsive-min.css">
-    <link rel="stylesheet" href="/css/ionicons.min.css">
-    <link rel="stylesheet" href="/css/default.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <style>
+        body {
+            font-family: 'M PLUS Rounded 1c', sans-serif;
+        }
+        .ui-menu .ui-menu-item {
+            font-size: 16px;
+            padding: 10px 16px;
+            background-color: #ffffff;
+            border-bottom: 1px solid #e2e8f0;
+        }
+    </style>
 </head>
-<body class="no-theme">
-    <span style="display:none" id="dark_mode_pref"></span>
-    <div class="pure-g">
-        <div class="pure-u-1 pure-u-md-2-24"></div>
-        <div class="pure-u-1 pure-u-md-20-24" id="contents">
-            <div class="pure-g navbar h-box" style="align-items: center;">
-                <div class="pure-u-1 pure-u-md-12-24 title-container">
-                    <h2 style="text-align:center; color: #565d64;"><a href="/" style="text-decoration:none;">Yuki Youtube</a></h2>
-                    <p style="text-align:center; color: #565d64;">necolian非公式改造版</p>
-                </div>
-                <div class="pure-u-1 pure-u-md-12-24 searchbar">
-                    <form id="searchForm" class="pure-form" action="/search" method="get">
-                        <fieldset>
-                            <input type="search" id="searchbox" autocomplete="on" autocorrect="on" autocapitalize="none" spellcheck="false" name="q" placeholder="検索" title="検索" value="{{ word }}">
-                        </fieldset>
-                    </form>
-                </div>
+<body class="bg-gray-900 text-gray-200 min-h-screen flex flex-col items-center p-4">
+
+    <div class="w-full max-w-4xl mx-auto p-6 md:p-10 bg-gray-800 rounded-3xl shadow-2xl space-y-8">
+        <div class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0 md:space-x-8">
+            <div class="text-center md:text-left">
+                <h1 class="text-4xl sm:text-5xl font-bold text-blue-400">Yuki Youtube</h1>
+                <p class="text-sm text-gray-400">necolian非公式改造版</p>
             </div>
-            <div class="pure-g h-box">
-                <div class="pure-u-2-3">
+            <div class="w-full md:w-1/2">
+                <form id="searchForm" class="w-full" action="/search" method="get">
+                    <div class="relative">
+                        <input type="search" id="searchbox" class="w-full py-3 px-6 text-lg rounded-full bg-gray-700 text-gray-100 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-transparent transition-all duration-300" autocomplete="on" autocorrect="on" autocapitalize="none" spellcheck="false" name="q" placeholder="検索" title="検索" value="{{ word }}">
+                        <button type="submit" class="absolute right-3 top-1/2 -translate-y-1/2 text-gray-400 hover:text-blue-500 transition-colors duration-200">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
+                                <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
+                            </svg>
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
 
-                    <h3>情報 - 現在のapiサーバー</h3><br>
-                    <p>Youtube-API:{{Youtube_API}}</p><br>
-                    <p>Channel-API:{{Channel_API}}</p><br>
-                    <p>Comments-API:{{Comments_API}}</p><br>
-                    
-                </div>
-                
-            </div>      
-    <script>$('#searchbox').autocomplete({
-                source: function (request, response) {
-                    {
-                        var url = "/suggest?keyword="+ request.term
-                        var xhr = new XMLHttpRequest();
-                        xhr.open("GET", url);
-                        xhr.onload = function() {
-                            response(JSON.parse(xhr.responseText));
-                        }
-                        xhr.send();
-                    }
-                },
-    　　　　　    select: function(event, ui) {
-                        // 候補が選択されたときの処理
-                        // テキストボックスに選択したアイテムをセット
-                        $("#searchbox").val(ui.item.value);
-                        // フォームを送信
-                        $("#searchForm").submit(); // フォームを送信
-                        return false; // jQuery UIのデフォルトの動作をキャンセル
-                },
-    　　　　　    delay: 300
-            });
+        <div class="w-full p-6 bg-gray-700 rounded-xl space-y-4">
+            <h3 class="text-lg font-semibold text-gray-200">情報 - 現在のapiサーバー</h3>
+            <div class="text-sm text-gray-400 space-y-2">
+                <p>Youtube-API: <span class="text-blue-300">{{Youtube_API}}</span></p>
+                <p>Channel-API: <span class="text-blue-300">{{Channel_API}}</span></p>
+                <p>Comments-API: <span class="text-blue-300">{{Comments_API}}</span></p>
+            </div>
+        </div>
+    </div>
+    
+    <script>
+        $('#searchbox').autocomplete({
+            source: function (request, response) {
+                var url = "/suggest?keyword=" + request.term;
+                var xhr = new XMLHttpRequest();
+                xhr.open("GET", url);
+                xhr.onload = function() {
+                    response(JSON.parse(xhr.responseText));
+                };
+                xhr.send();
+            },
+            select: function(event, ui) {
+                $("#searchbox").val(ui.item.value);
+                $("#searchForm").submit();
+                return false;
+            },
+            delay: 300
+        });
 
-    function reload() {
-        location.reload();
-    }
-
-    setTimeout(function (){location.reload();},5000)
+        setTimeout(function (){location.reload();},5000);
     </script>
 </body>
 </html>
