--- a/templates/search.html
+++ b/templates/search.html
@@ -37,7 +37,7 @@
         <header class="p-6 md:p-8 bg-gray-800 rounded-3xl shadow-2xl flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0 md:space-x-8">
             <div class="text-center md:text-left">
                 <h1 class="text-4xl sm:text-5xl font-bold text-blue-400"><a href="/" class="hover:text-blue-300 transition-colors duration-200">Yuki Youtube</a></h1>
-                <p class="text-sm text-gray-400">necolian非公式改造版</p>
+                <p class="text-sm text-gray-400">ゆず改造インスタンス</p>
             </div>
             <div class="w-full md:w-1/2">
                 <form id="searchForm" class="w-full" action="/search" method="get">
@@ -122,3 +122,4 @@
     </script>
 </body>
 </html>
+
