--- a/templates/video.html
+++ b/templates/video.html
@@ -43,7 +43,7 @@
         <header class="p-6 md:p-8 bg-gray-800 rounded-3xl shadow-2xl flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
             <div class="text-center md:text-left">
                 <h1 class="text-4xl sm:text-5xl font-bold text-blue-400"><a href="/" class="hover:text-blue-300 transition-colors duration-200">Yuki Youtube</a></h1>
-                <p class="text-sm text-gray-400">necolian非公式改造版</p>
+                <p class="text-sm text-gray-400">ゆず改造インスタンス</p>
             </div>
             <div class="w-full md:w-1/2 flex items-center justify-end space-x-4">
                 <a href="/requestform" class="text-sm md:text-base text-gray-400 hover:text-blue-400 transition-colors duration-200 whitespace-nowrap">新機能の要望やバグ報告</a>
@@ -176,3 +176,4 @@
             });</script>
 </body>
 </html>
+
